--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: client
-        image: gcr.io/ticketing-dev-370117/client
+        image: mert5432100/client
         
 ---
 
