--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: tickets  
-        image: eu.gcr.io/ticketing-dev-370117/tickets
+        image: mert5432100/tickets
         env:
           - name: MONGO_URI
             value: 'mongodb://tickets-mongo-srv:27017/tickets'
