--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,13 +3,13 @@ kind: Config
 metadata:
   name: ticketing-app
 build:
-  googleCloudBuild:
-    projectId: ticketing-dev-370117
-    
+  local:
+      push: false
+  
   
     
   artifacts:
-  - image: eu.gcr.io/ticketing-dev-370117/auth
+  - image: mert5432100/auth
     context: auth
     docker:
       dockerfile: Dockerfile
@@ -17,7 +17,7 @@ build:
        manual:
         - dest: .
           src: src/**/*.ts
-  - image: eu.gcr.io/ticketing-dev-370117/client
+  - image: mert5432100/client
     context: client
     docker:
           dockerfile: Dockerfile
@@ -25,7 +25,7 @@ build:
        manual:
         - dest: .
           src: '**/*.js'
-  - image: eu.gcr.io/ticketing-dev-370117/tickets
+  - image: mert5432100/tickets
     context: tickets
     docker:
       dockerfile: Dockerfile
