order servisi olusturuldu. Servisin deployment dosyaları, ingress ayarları yapıldı ve route skaffoldları olusturuldu. Route diyagramları eklendi

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -25,7 +25,14 @@ spec:
           service:
             name: tickets-srv
             port:
-              number: 3000      
+              number: 3000
+      - pathType: Prefix
+        path: /api/orders/?(.*)
+        backend:
+          service:
+            name: orders-srv
+            port:
+              number: 3000            
       - pathType: Prefix
         path: "/?(.*)"
         backend:
