--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -33,7 +33,14 @@ build:
        manual:
         - dest: .
           src: src/**/*.ts
-
+  - image: mert5432100/orders
+    context: orders
+    docker:
+      dockerfile: Dockerfile
+    sync: 
+      manual:
+        - dest: .
+          src: src/**/*.ts
 manifests:
   rawYaml:
   - infra/k8s/*
