veritabanındaki veriler için versiyon kontrolü eklendi ve testleri yapıldı

--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         
       - name: auth  
-        image: mert5432100/auth
+        image: gcr.io/ticketing-app-372411/auth
         env:
           - name: MONGO_URI
             value: 'mongodb://auth-mongo-srv:27017/auth'
