--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: tickets  
-        image: mert5432100/tickets
+        image: gcr.io/ticketing-app-372411/tickets
         env:
           - name: NATS_CLIENT_ID
             valueFrom:
