--- a/orders/package.json
+++ b/orders/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.4",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
