--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -3,44 +3,34 @@ kind: Config
 metadata:
   name: ticketing-app
 build:
-  local:
-      push: false
-  
-  
-    
+  googleCloudBuild:
+    projectId: ticketing-app-372411
   artifacts:
-  - image: mert5432100/auth
+  - image: gcr.io/ticketing-app-372411/auth
     context: auth
     docker:
       dockerfile: Dockerfile
-    sync:
-       manual:
-        - dest: .
-          src: src/**/*.ts
-  - image: mert5432100/client
+  - image: gcr.io/ticketing-app-372411/client
     context: client
     docker:
-          dockerfile: Dockerfile
-    sync:
-       manual:
-        - dest: .
-          src: '**/*.js'
-  - image: mert5432100/tickets
-    context: tickets
-    docker:
       dockerfile: Dockerfile
-    sync:
-       manual:
-        - dest: .
-          src: src/**/*.ts
-  - image: mert5432100/orders
+  - image: gcr.io/ticketing-app-372411/orders
     context: orders
     docker:
       dockerfile: Dockerfile
-    sync: 
-      manual:
-        - dest: .
-          src: src/**/*.ts
+  - image: gcr.io/ticketing-app-372411/tickets
+    context: tickets
+    docker:
+      dockerfile: Dockerfile
+
 manifests:
   rawYaml:
-  - infra/k8s/*
+  - infra/k8s/auth-depl.yaml
+  - infra/k8s/auth-mongo-depl.yaml
+  - infra/k8s/client-depl.yaml
+  - infra/k8s/ingress-srv.yaml
+  - infra/k8s/nats-depl.yaml
+  - infra/k8s/orders-depl.yaml
+  - infra/k8s/orders-mongo-depl.yaml
+  - infra/k8s/tickets-depl.yaml
+  - infra/k8s/tickets-mongo-depl.yaml
