ödeme servisi olusturuldu, listenerları implemente edildi ve testleri yapıldi

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -26,6 +26,12 @@ build:
     context: expiration
     docker:
       dockerfile: Dockerfile
+  - image: gcr.io/ticketing-app-372411/payments
+    context: payments
+    docker:
+      dockerfile: Dockerfile
+  
+  
  
 manifests:
   rawYaml:
@@ -40,3 +46,5 @@ manifests:
   - infra/k8s/tickets-mongo-depl.yaml
   - infra/k8s/expiration-redis-depl.yaml
   - infra/k8s/expiration-depl.yaml
+  - infra/k8s/payments-depl.yaml
+  - infra/k8s/payments-mongo-depl.yaml
