--- a/infra/k8s/payments-mongo-depl.yaml
+++ b/infra/k8s/payments-mongo-depl.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tickets-mongo-depl
+  name: payments-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tickets-mongo
+      app: payments-mongo
   template:
     metadata:
       labels:
-        app: tickets-mongo
+        app: payments-mongo
     spec:
       containers:
-      - name: tickets-mongo
+      - name: payments-mongo
         image: mongo
         resources:
           limits:
@@ -23,11 +23,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: tickets-mongo-srv
+  name: payments-mongo-srv
 spec:
   type: ClusterIP
   selector:
-    app: tickets-mongo
+    app: payments-mongo
   ports:
   - name: db
     protocol: TCP
