--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -31,6 +31,15 @@ spec:
               secretKeyRef:
                 name: jwt-secret
                 key: jwt
+          - name: STRIPE_KEY
+            valueFrom:
+              secretKeyRef:
+                name: stripe-secret
+                key: STRIPE_KEY
+             
+                  
+                
+                
               
      
           
