--- a/payments/package.json
+++ b/payments/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.4",
     "mongoose-update-if-current": "^1.4.0",
+    "stripe": "^11.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
