--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: expiration  
-        image: gcr.io/ticketing-app-372411/expiration
+        image: mer5432100/expiration
         env:
           - name: NATS_CLIENT_ID
             valueFrom:
