--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -14,7 +14,7 @@ build:
           src: 'src/**/*.ts'
     docker:
       dockerfile: Dockerfile
-  - image: gcr.io/ticketing-app-372411/client
+  - image: mer5432100/client
     context: client
     sync: 
       manual:
@@ -22,7 +22,7 @@ build:
           src: 'src/**/*.js'
     docker:
       dockerfile: Dockerfile
-  - image: gcr.io/ticketing-app-372411/orders
+  - image: mer5432100/orders
     context: orders
     sync: 
       manual:
@@ -30,7 +30,7 @@ build:
           src: 'src/**/*.ts'
     docker:
       dockerfile: Dockerfile
-  - image: gcr.io/ticketing-app-372411/tickets
+  - image: mer5432100/tickets
     context: tickets
     sync: 
       manual:
@@ -38,7 +38,7 @@ build:
           src: 'src/**/*.ts'
     docker:
       dockerfile: Dockerfile
-  - image: gcr.io/ticketing-app-372411/expiration
+  - image: mer5432100/expiration
     context: expiration
     sync: 
       manual:
@@ -46,7 +46,7 @@ build:
           src: 'src/**/*.ts'
     docker:
       dockerfile: Dockerfile
-  - image: gcr.io/ticketing-app-372411/payments
+  - image: mer5432100/payments
     context: payments
     sync: 
       manual:
@@ -72,3 +72,4 @@ manifests:
   - infra/k8s/expiration-depl.yaml
   - infra/k8s/payments-depl.yaml
   - infra/k8s/payments-mongo-depl.yaml
+  - infra/k8s-dev/*
