--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: orders  
-        image: mer5432100/orders
+        image: mert5432100/orders
         env:
           - name: NATS_CLIENT_ID
             valueFrom:
